# Secure-File-Transfer

./: .gitignore  Dockerfile  LICENSE  README.md  SECURITY_ANALYSIS.md  THREAT_MODEL.md  docker-compose.yml  generate_keys.py  index.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml
SecureFileTransfer/: rsa_generate_keys.py
SecureFileTransfer/client/: client.py  sndstate.txt
SecureFileTransfer/client/siftprotocols/: siftlogin.py  siftmtp.py
SecureFileTransfer/server/: private_key.pem  rsa_utility.py
_specification/: SiFT v1.0 specification.md
attacks/: _harness.py  attack_downgrade.py  attack_nonce_reuse.py  attack_replay.py  attack_tamper.py  attack_traversal.py  run_all.py
client/: client.py  public_key.pem
server/: server.py
server/siftprotocols/: siftlogin.py  siftmtp.py
siftprotocols/: __init__.py  monitoring.py  siftcmd.py  siftdnl.py  siftlogin.py  siftmtp.py  siftupl.py
tests/: conftest.py  test_cmd.py  test_fuzz.py  test_login.py  test_monitoring.py  test_mtp.py
webdemo/: app.py
