[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sift-secure-file-transfer"
version = "1.0.0"
description = "SiFT v1.0 — a Simple File Transfer protocol with authenticated encryption, replay defence, and security monitoring"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Kritika Pandit" },
    { name = "Daniel Lumbu" },
]
dependencies = [
    "pycryptodome>=3.20",
]

[project.optional-dependencies]
demo = ["flask>=3.0", "flask-sock>=0.7"]
dev = ["pytest>=8.0", "pytest-cov", "hypothesis>=6.0", "bandit", "pip-audit"]

[tool.setuptools]
packages = ["siftprotocols"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.bandit]
# B413 flags `import Crypto` as the long-deprecated PyCrypto. This project uses
# pycryptodome — the actively maintained, import-compatible fork under the same
# `Crypto` namespace — so B413 is a false positive here and is skipped project-wide.
skips = ["B413"]
